Align sponsor logos, fix AAP

--- a/css/main.scss
+++ b/css/main.scss
@@ -39,11 +39,19 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
         "syntax-highlighting"
 ;
+
+.sponsors {
+    text-align: center;
+
+    img {
+        margin-bottom: 30px;
+        padding-right: 20px;
+        vertical-align: middle;
+    }
+}
